--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1761,8 +1761,9 @@ input, select, textarea {
 		}
 
 			.image.avatar48 img {
-				width: 48px;
-				height: 48px;
+				max-width: 100%;
+				height: 100%;
+				object-fit: cover;
 			}
 
 		.image.fit {
