--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1762,7 +1762,7 @@ input, select, textarea {
 
 			.image.avatar48 img {
 				max-width: 100%;
-				height: 100%;
+				max-height: 100%;
 				object-fit: cover;
 			}
 
